--- a/assets/scss/_legacy.scss
+++ b/assets/scss/_legacy.scss
@@ -30,8 +30,8 @@ body {
     border: none;
     background: transparent;
     font-size: 14px;
-    padding: 25px 0px 25px; 
-  
+    padding: 25px 0px 25px;
+
     a {
         text-decoration: none;
         color: #007bff;
@@ -101,7 +101,7 @@ a{
 }
 
 .number {
-    font-size: 28px;
+    font-size: 20px;
     font-weight: 300;
     margin-bottom: 0;
 
@@ -276,19 +276,24 @@ a{
     font-size: 36px;
     font-weight: 550;
     color: #fff;
-    text-align: center;
+    // text-align: center;
 }
 
-.box_acst_number{    
+.box_acst_number{
     margin-bottom: 15px;
 }
 
 .box_acst_number a{
+    padding: 10px;
     font-size: 14px;
     margin-right: 10px;
     margin-bottom: 15px;
     color: #9fcdff;
     font-weight: 450;
+        &:hover {
+            background-color: white;
+            color: #005bbb;
+        }
 }
 
 .line_bg_block{
@@ -317,7 +322,7 @@ a{
     font-weight: 500;
     color: #fff;
     // text-align: center;
- 
+
 }
 
 .bg__line {
@@ -379,8 +384,8 @@ a{
 .header__name {
     color: #000;
     font-size: 24px;
-    font-weight: 500; 
-    margin-bottom: 25px;   
+    font-weight: 500;
+    margin-bottom: 25px;
     @media screen and (max-width: 576px) {
         margin-top: 25px;
     }
@@ -893,7 +898,7 @@ font-weight: 450;
 
 
 .number__footer {
-    font-size: 28px;
+    font-size: 20px;
     font-weight: 300;
     margin-bottom: 0;
 }
@@ -1048,13 +1053,13 @@ font-weight: 450;
     font-weight: 450;
     color: #000;
     margin-top: 15px;
-  
+
     @media screen and (max-width: 1199px) {
         margin-top: 15px;
     }
-  
+
   }
-  
+
   .political__text__small {
     font-size: 16px;
     font-weight: 400;
@@ -1062,18 +1067,18 @@ font-weight: 450;
     margin-top: 15px;
     margin-bottom: 15px;
   }
-  
+
   .text_pynkt{
   font-size: 14px;
   font-weight: 450;
   }
-  
+
   .line_end {
     border: 0.5px solid #ebebeb;
     margin-top: 25px;
     margin-bottom: 25px;
   }
-  
+
   .header_right_column{
     font-size: 20px;
     font-weight: 400;
@@ -1082,7 +1087,7 @@ font-weight: 450;
         margin-top: 15px;
     }
   }
-  
+
   .box_right_column a{
   text-decoration: none;
   list-style-type: none;
@@ -1095,23 +1100,23 @@ font-weight: 450;
     transition: 0.3s;
   }
   }
-  
+
   .sider_bar {
     position: sticky;
     top: 4rem;
     z-index: 1000;
     height: calc(45vh);
   }
-  
+
   .left_line_headline {
     border: 0.5px solid #39567e;
     margin-top: 35px;
     width: 95px;
     @media screen and (max-width: 992px) {
-      display: none;     
+      display: none;
     }
   }
-  
+
 
 // Профстандарты в области сварки
 
@@ -1204,7 +1209,7 @@ font-weight: 450;
 .header__service {
     font-size: 24px;
     font-weight: 450;
-    color: #000;   
+    color: #000;
     margin-bottom: 10px;
     @media screen and (max-width: 992px) {
       font-size: 20px;
@@ -1241,7 +1246,7 @@ font-weight: 450;
 }
 
 .introduction_text{
-    font-size: 16px; 
+    font-size: 16px;
     margin-bottom: 10px;
     margin-top: 10px;
     color: #004085;
@@ -1256,7 +1261,7 @@ font-weight: 450;
 }
 
 .introduction_text_two{
-    font-size: 16px; 
+    font-size: 16px;
     margin-bottom: 10px;
     margin-top: 10px;
     color: #856404;
@@ -1272,7 +1277,7 @@ font-weight: 450;
 }
 
 .introduction_text_warning{
-    font-size: 16px; 
+    font-size: 16px;
     margin-bottom: 10px;
     margin-top: 10px;
     color: #721c24;
@@ -1291,7 +1296,7 @@ font-weight: 450;
     margin-top: 10px;
 }
 
-.box_service_info p{  
+.box_service_info p{
     font-size: 15px;
     font-weight: 450;
     line-height: 1.8;
@@ -1580,11 +1585,11 @@ font-weight: 450;
 
 .small_text_center{
     font-size: 16px;
-    font-weight: 350;    
+    font-weight: 350;
 }
 
 .introduction_text_center{
-    font-size: 16px; 
+    font-size: 16px;
     margin-bottom: 10px;
     margin-top: 10px;
     color: #004085;
@@ -1691,7 +1696,7 @@ font-weight: 450;
 .name_contacti{
     margin-top: 10px;
     font-size: 20px;
-    font-weight: 450;  
+    font-weight: 450;
     color: #005bbb;
 }
 
@@ -1922,7 +1927,6 @@ font-weight: 400;
 }
 
 .box__news__inside__block {
-    padding: 45px;
     background-color: #fcfcfc;
     margin-top: 30px;
 
