--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -32,6 +32,8 @@
   {% include 'mainapp/includes/modal-window.html'%}
   <!-- End Include Modal -->
 
+  {% include 'mainapp/admin_panel.html' %}
+
   <!-- Include HEADER -->
   {% include 'mainapp/includes/header_top.html' %}
   <!-- End Include HEADER -->
@@ -67,7 +69,7 @@
   <script src="{% static 'js/jquery.maskedinput.js' %}"></script>
   <script src="{% static 'js/jquery.maskedinput.min.js' %}"></script>
 
-  
+
 </body>
 
 </html>
