--- a/mainapp/templates/mainapp/center_ano_dpo.html
+++ b/mainapp/templates/mainapp/center_ano_dpo.html
@@ -1,5 +1,5 @@
 {% extends 'mainapp/base.html' %}
-{% load static %}
+{% load static %}{% load link_holders %}
 {% block content %}
 
 <div class="box_content_page" id="page-top">
@@ -14,11 +14,11 @@
 
     <div class="row">
       <div class="col-xl-2">
-        <div class="header__inside__pages">Об учебно-курсовом центре</div>
+        <div class="header__inside__pages">Подробная информация</div>
       </div>
       <div class="col-xl-4">
         <div class="headline_center">
-          Основные сведения
+          {% chunk 'ORG_DETAILS' 'chunk_title' %}
         </div>
       </div>
     </div>
@@ -29,159 +29,7 @@
           АНО ДПО «Стандарт-Диагностика» входит в Группу компаний «Диагностика», которая была основана в 1994 году.
         </p>
         <div class="box_center">
-          <p class="small_text_center">
-            Учебный центр был создан как структурное подразделение ЗАО МНТЦ «Диагностика» в 1996 году. Получена лицензия
-            Госгортехнадзора на подготовку кадров 22.04.1996 г.
-          </p>
-          <p class="small_text_center">
-            В 1999 г. Учебный центр выделен в отдельную юридическую структуру Автономная некоммерческая организация
-            Магнитогорский аттестационный центр «Стандарт-Диагностика», (АНО МАЦ «Стандарт-Диагностика»), учредителем
-            являлось ЗАО МНТЦ «Диагностика». Получена лицензия Управления образования по Челябинской области на
-            осуществление образовательной деятельности, которая подтверждалась каждые 5 лет.
-          </p>
-          <p class="small_text_center">
-            С 2006 года и по настоящее время учебный центр является Экзаменационным центром Независимого органа по
-            аттестации (сертификации) персонала в области неразрушающего контроля АО «НИКИМТ-Атомстрой» -
-            Аттестационного центра НИКИМТ (Свидетельство № 09-03).
-          </p>
-          <p class="small_text_center">
-            Наша организация аккредитована в системе экспертизы и аккредитации в области промышленной безопасности в
-            качестве Независимого атеестационно-методического центра по предаттестационной подготовке руководителей и
-            специалистов в области промышленной безопасности в следующих областях: А, Б1, Б2, Б3, Б4, Б6, Б7, Б8, Б9,
-            Б10, Б11, Г1, Г2, Г3, Д.
-          </p>
-          <p class="small_text_center">
-            С 2010 г. АНО МАЦ "Стандарт-Диагностика" аккредитована Некоммерческим партнерством «Саморегулируемая
-            организация Союз строительных компаний Урала и Сибири» (Свидетельство о профессионально-общественной
-            аккредитации № 09-15 от 23.03.15г.) и имеет право осуществлять профессиональное обучение руководителей и
-            специалистов организации – членов НП СРО «ССК УрСиб», в рамках реализации программ дополнительного
-            профессионального образования.
-          </p>
-          <p class="small_text_center">
-            В 2011 г. Министерством здравоохранения и социального развития РФ наша организация внесена в реестр
-            аккредитованных организаций, оказывающие услуги в области охраны труда под регистрационным номером № 2234 от
-            08.11.2011г. (Уведомление от 30.11.2011 г.)
-          </p>
-          <div class="line_inside_pages"></div>
-          <p class="subtitle_center">
-            АНО МАЦ "Стандарт-Диагностика" участвовала в организации и проведении семинаров:
-          </p>
-          <p class="small_text_center">
-            - «Обеспечение промышленной безопасности при эксплуатации опасных металлургических и коксохимических
-            предприятий и производств», 2007 г., г. Сочи совместно с Управлением государственного горного и
-            металлургического надзора Центрального аппарата Ростехнадзора
-          </p>
-          <p class="small_text_center">
-            - IX Всероссийский Форум Единой системы оценки соответствия на объектах, подконтрольных Ростехнадзору, 2008
-            г., г. Сочи, совместно с Ростехнадзором.
-          </p>
-          <p class="small_text_center">
-            - «Совершенствование надзорной деятельности и развитие технического регулирования в металлургических и
-            коксохимических производствах», 2008 г., г. Миасс, оз. Тургояк.
-          </p>
-          <p class="small_text_center">
-            - XI Всероссийский Форум Единой системы оценки соответствия на объектах, подконтрольных Федеральной службе
-            по экологическому, технологическому и атомному надзору 2013г. г. Сочи.
-          </p>
-          <div class="line_inside_pages"></div>
-          <p class="subtitle_center">
-            В 2016 г. АНО МАЦ "Стандарт-Диагностика" изменила название в соответствии с Федеральным законом от 29
-            декабря 2012 года №273-ФЗ «Об образовании в Российской Федерации», став Автономной некоммерческой
-            организацией дополнительного профессионального образования «Стандарт-Диагностика» (АНО ДПО
-            «Стандарт-Диагностика») и вновь получила лицензию.
-          </p>
-          <p class="small_text_center">
-            В настоящее время АНО ДПО «Стандарт-Диагностика» предоставляет широкий спектр различных услуг. Реализация
-            программ профессионального обучения, дополнительного профессионального образования ведется по следующим
-            направлениям:
-          </p>
-          <div class="introduction_text_center">
-            <p>
-              • предаттестационная подготовка руководителей и специалистов по вопросам промышленной безопасности,
-              энергетической безопасности и безопасности гидротехнических сооружений;
-            </p>
-            <p>
-              • подготовка к подтверждению и повышению группы допуска по электробезопасности;
-            </p>
-            <p>
-              • обучение и проверка знаний требований охраны труда руководителей, специалистов и уполномоченных по
-              охране труда;
-            </p>
-            <p>
-              • обучение пожарно-техническому минимуму руководителей, специалистов и работников предприятий;
-            </p>
-            <p>
-              • подготовка по профессиям;
-            </p>
-            <p>
-              • подготовка по профессиям;
-            </p>
-            <p>
-              • повышение квалификации, обучающие семинары и тренинги для руководителей и специалистов;
-            </p>
-            <p>
-              • подготовка специалистов по визуальному и измерительному контролю в соответствии с требованиями «Правил
-              аттестации персонала в области неразрушающего контроля» (I и II уровень).
-            </p>
-          </div>
-          <div class="line_inside_pages"></div>
-          <p class="small_text_center">
-            Организация укомплектована необходимым учебно-методическим и информационным обеспечением. Имеется
-            необходимый библиотечный фонд учебных материалов для слушателей и преподавателей в печатном и электронном
-            виде, который своевременно пополняется новыми материалами.
-          </p>
-          <div class="line_inside_pages"></div>
-          <div class="doc_dpo">            
-            <div class="headline_doc_name">
-                Лицензия АНО ДПО Стандарт-Диагностика 2016
-            </div>
-            <main role="main">
-                <p class="imglist d-flex">
-                    <a href="{% static 'img/doc_dpo_6.jpg' %}" class="img_box" data-fancybox="group1" data-type="image">
-                        <img src="{% static 'img/doc_dpo_6.jpg' %}" class="img-fluid">
-                    </a>              
-                    <a href="{% static 'img/doc_dpo_5.jpg' %}" class="img_box" data-fancybox="group1" data-type="image">
-                        <img src="{% static 'img/doc_dpo_5.jpg' %}" class="img-fluid">
-                    </a>              
-                    <a href="{% static 'img/doc_dpo_4.jpg' %}" class="img_box" data-fancybox="group1" data-type="image">
-                        <img src="{% static 'img/doc_dpo_4.jpg' %}" class="img-fluid">
-                    </a>              
-                </p>
-            </main>
-            <div class="line_inside_pages"></div>
-            <div class="headline_doc_name">
-                Аккредитация по ОТ 2017
-            </div>
-            <main role="main">
-                <p class="imglist d-flex">
-                    <a href="{% static 'img/doc_dpo_3.jpg' %}" class="img_box" data-fancybox="group1" data-type="image">
-                        <img src="{% static 'img/doc_dpo_3.jpg' %}" class="img-fluid">
-                    </a>              
-                </p>
-            </main>
-            <div class="line_inside_pages"></div>
-            <div class="headline_doc_name">
-                Свидетельство НИКИМТ-Атомстрой
-            </div>
-            <main role="main">
-                <p class="imglist d-flex">
-                    <a href="{% static 'img/doc_dpo.jpg' %}" class="img_box" data-fancybox="group1" data-type="image">
-                        <img src="{% static 'img/doc_dpo.jpg' %}" class="img-fluid">
-                    </a>              
-                </p>
-            </main>
-            <div class="line_inside_pages"></div>
-            <div class="headline_doc_name">
-                Свидетельство СРО
-            </div>
-            <main role="main">
-                <p class="imglist d-flex">
-                    <a href="{% static 'img/doc_dpo_2.jpg' %}" class="img_box" data-fancybox="group1" data-type="image">
-                        <img src="{% static 'img/doc_dpo_2.jpg' %}" class="img-fluid">
-                    </a>              
-                </p>
-            </main>
-          </div>
+          {% chunk 'ORG_DETAILS' 'chunk_html' %}
         </div>
       </div>
       <div class="col-xl-1"></div>
@@ -192,29 +40,10 @@
           </div>
           <div class="box_doc_right_column_center_dpo">
             <ul class="dpo_spisok_doc">
-              <a href="">
-                <li>Отчет о результатах самообследования</li>
-              </a>
-              <a href="">
-                <li>Положение о проведении самообследования</li>
-              </a>
-              <a href="">
-                <li>Правила внутреннего распорядка слушателей</li>
-              </a>
-              <a href="">
-                <li>Положение об оказании платных образовательных услуг</li>
-              </a>
-              <a href="">
-                <li>Правила приема обучающихся</li>
-              </a>
-              <a href="">
-                <li>Положение об итоговой аттестации</li>
-              </a>
-              <a href="">
-                <li>Оценка условий труда</li>
-              </a>
-              <a href="">
-                <li>Положение о сайте</li>
+            {% for doc in random_documents %}
+              <a href="{{ doc.document.url }}" download="">
+                <li class="p-1">{{ doc.title }}</li>
+            {% endfor %}
               </a>
             </ul>
           </div>
