--- a/mainapp/templates/mainapp/includes/content.html
+++ b/mainapp/templates/mainapp/includes/content.html
@@ -7,32 +7,12 @@
 
             <div class="col-xl-6">
                 <div class="header__name">
-                    <p class="">Группа компаний "Стандарт-Диагностика"</p>
+                    <p class="">{% chunk 'ABOUT_ORG' 'chunk_title' %}</p>
                 </div>
                 <div class="content__text__info__box">
 
-                    <p class="text__medium">
-                        Учебный центр был создан как структурное подразделение ЗАО МНТЦ «Диагностика» в 1996 году.
-                        Получена лицензия Госгортехнадзора на подготовку кадров 22.04.1996г.
-                    </p>
                     <div class="box_content_info_center">
-                        <p class="content_info_center">
-                            Наша организация аккредитована в системе экспертизы и аккредитации в области промышленной
-                            безопасности в качестве Независимого атеестационно-методического центра по
-                            предаттестационной подготовке руководителей и специалистов в области промышленной
-                            безопасности в следующих областях: А, Б1, Б2, Б3, Б4, Б6, Б7, Б8, Б9, Б10, Б11, Г1, Г2, Г3,
-                            Д.
-                        </p>
-                        <p class="content_info_center">
-                            С 2010 г. АНО МАЦ "Стандарт-Диагностика" аккредитована Некоммерческим партнерством
-                            «Саморегулируемая организация Союз строительных компаний Урала и Сибири» (Свидетельство о
-                            профессионально-общественной аккредитации № 09-15 от 23.03.15г.) и имеет право осуществлять
-                            профессиональное обучение руководителей и специалистов организации – членов НП СРО «ССК
-                            УрСиб», в рамках реализации программ дополнительного профессионального образования.
-                        </p>
-                        <p class="content_info_center">
-                                В 2011 г. Министерством здравоохранения и социального развития РФ наша организация внесена в реестр аккредитованных организаций, оказывающие услуги в области охраны труда под регистрационным номером № 2234 от 08.11.2011г. (Уведомление от 30.11.2011 г.)
-                        </p>
+                        <p class="content_info_center">{% chunk 'ABOUT_ORG' 'chunk_html'%}</p>
                     </div>
                     <div class="link__read__more">
                         <a href="{% url 'center_ano_dpo' %}#page-top" class="read__more__link">
