--- a/mainapp/templates/mainapp/includes/header_top.html
+++ b/mainapp/templates/mainapp/includes/header_top.html
@@ -2,31 +2,26 @@
 <div class="box_header_top">
     <div class="container">
         <div class="row">
-        <div class="col-xl-2">
+        <div class="col-xl-4">
             <div class="box_time">
                 <p class="time_work">
                     Режим работы: Пн-Чт 08:00 - 17:00
-                </p>               
+                </p>
             </div>
         </div>
-        <div class="col-xl-2">
+        <div class="col-xl-4">
             <div class="box_time">
                 <p class="time_work">
                     Пятница:  08:00 - 15:45
-                </p>        
-            </div>            
-        </div>
-        <div class="col-xl-2">
-            <div class="box_time">
-                <p class="time_no_work">
-                    Сб-Вс: ВЫХОДНОЙ
-                </p>        
+                </p>
             </div>
         </div>
-        <div class="col-xl-6">
-           <div class="profstandart_header_top_button">
-            <a href="{% url 'profstandard' %}#page-top" class="profstandard_button">Профстандарты в сварке</a>
-           </div>
+        <div class="col-xl-4">
+            <div class="box_time">
+                <p class="time_no_work">
+                    Сб, Вс: Выходной
+                </p>
+            </div>
         </div>
         </div>
     </div>
