--- a/mainapp/templates/mainapp/doc_new.html
+++ b/mainapp/templates/mainapp/doc_new.html
@@ -10,112 +10,46 @@
           class="arrow__back__to__main text-align-center" alt="">
         На главную</a>
     </button>
-  
+
     <div class="row">
-  
+
       <div class="col-xl-2">
         <div class="header__inside__pages">Документы</div>
       </div>
       <div class="col-xl-7">
         <div class="col-12">
-          <p class="header__doc" id="ac_stdiag">Список документов СУР - 22АЦ</p>
-          <p class="doc__name__list">Наименование документов</p>
-          {% for doc in sur_22ac_list %}
+        {% for category in document_categories %}
+          <p class="header__doc" id="{{ category.code }}">{{ category.name }}</p>
+          <p class="doc__name__list">Наименования документов</p>
+          {% for doc in documents %}
+          {% if doc.category == category %}
           <a href="{{ doc.document.url }}" download="">
             <div class="doc__content">
               <p class="doc__name">{{ doc.title }}</p>
             </div>
           </a>
+          {% endif %}
           {% endfor %}
+        {% endfor %}
         </div>
-        <div class="col-12">
-          <p class="header__doc">Список документов АЦСМ-62</p>
-          <p class="doc__name__list">Наименование документов</p>
-          {% for doc in acsm_62_list %}
-          <a href="{{ doc.document.url }}" download="">
-            <div class="doc__content">
-              <p class="doc__name">{{ doc.title }}</p>
-            </div>
-          </a>
-          {% endfor %}
-        </div>
-        <div class="col-12">
-          <p class="header__doc">Список документов АЦСО-114</p>
-          <p class="doc__name__list">Наименование документов</p>
-          {% for doc in acso_114_list %}
-          <a href="{{ doc.document.url }}" download="">
-            <div class="doc__content">
-              <p class="doc__name">{{ doc.title }}</p>
-            </div>
-          </a>
-          {% endfor %}
-        </div>
-        <div class="col-12">
-          <p class="header__doc">Список документов АЦСТ-132</p>
-          <p class="doc__name__list">Наименование документов</p>
-          {% for doc in acst_132_list %}
-          <a href="{{ doc.document.url }}" download="">
-            <div class="doc__content">
-              <p class="doc__name">{{ doc.title }}</p>
-            </div>
-          </a>
-          {% endfor %}
-        </div>
-        <div class="col-12">
-          <p class="header__doc" id="ano_dpo_stdiag">Список документов АНО ДПО "Стандарт-Диагностика"</p>
-          <p class="doc__name__list">Наименование документов</p>
-          {% for doc in ano_dpo_list %}
-          <a href="{{ doc.document.url }}" download="">
-            <div class="doc__content">
-              <p class="doc__name">{{ doc.title }}</p>
-            </div>
-          </a>
-          {% endfor %}
-        </div>
-        <div class="col-12">
-          <p class="header__doc" id="lab_stdiag">Документы испытательная лаборатория "Стандарт-Диагностика"</p>
-          <p class="doc__name__list">Наименование документов</p>
-          {% for doc in lab_list %}
-          <a href="{{ doc.document.url }}" download="">
-            <div class="doc__content">
-              <p class="doc__name">{{ doc.title }}</p>
-            </div>
-          </a>
-          {% endfor %}
-        </div>
-        {% if other_docs %}
-        <div class="col-12">
-          <p class="header__doc">Другие документы</p>
-          <p class="doc__name__list">Наименование документов</p>
-          {% for doc in other_docs %}
-          <a href="{{ doc.document.url }}" download="">
-            <div class="doc__content">
-              <p class="doc__name">{{ doc.title }}</p>
-            </div>
-          </a>
-          {% endfor %}
-        </div>
-        {% endif %}
       </div>
       <div class="col-xl-3">
         <div class="sider__bar">
           <p class="right__column__header">
-            Услуги группы компаний "Стандарт-Диагностика":
+            Услуги {{ profile.org_short_name }}
           </p>
           <div class="list__service__column">
-            <p class="small__column__text"><a href="{% url 'atso' %}#page-top"> Аттестация сварочного оборудования</a></p>
-            <p class="small__column__text"><a href="{% url 'acsm' %}#page-top"> Аттестация сварочных материалов</a></p>               
-            <p class="small__column__text"><a href="{% url 'acst' %}#page-top"> Аттестация производственной технологии сварки (наплавки)</a></p>               
-            <p class="small__column__text"><a href="{% url 'atsssp' %}#page-top">Аттестация сварщиков</a></p>               
-            <p class="small__column__text"><a href="{% url 'lab' %}#page-top"> Испытательная лаборатория</a></p>               
+          {% for service in all_services %}
+            <p class="small__column__text"><a href="{% url 'service_details' service.pk %}">{{ service.title }}</a></p>
+          {% endfor %}
 </div>
 
         </div>
       </div>
-  
-  
+
+
       <div class="line__otstup__inside__pages"></div>
-  
+
       <button class="back__to__main">
         <a href="{% url 'main' %}"> <img src="{% static 'img/back__arrow-01.png' %}"
             class="arrow__back__to__main text-align-center" alt="">
