--- a/mainapp/templates/mainapp/includes/background-block.html
+++ b/mainapp/templates/mainapp/includes/background-block.html
@@ -2,34 +2,45 @@
     <div class="bg__gradient">
         <div class="container">
             <div class="row">
-                <div class="col-xl-6">
+                <div class="col-xl-9">
                     <div class="bg__text">
-                        <p class="bg__text__head">Группа компаний "Стандарт Диагностика"</p>                       
-                        <p class="bg__text__naks">ООО "НАКС Стандарт-Диагностика" является
-                            аттестационным центром НАКС по направлениям аттестации персонала, сварочных материалов,
-                            оборудования и технологий и внесен в реестр НАКС со следующими шифрами:</p>
+                        <p class="bg__text__head">{{ profile.org_short_name }}</p>
+                        <p class="bg__text__naks">{{ profile.org_intro }}</p>
                       <div class="box_acst_number">
-                        <a href="http://www.naks.ru/assp/reestrac/index.php?ID=540730639">
-                            СУР-22АЦ    
+                        {% if profile.org_csp_reestr_link %}
+                        <a href="{{ profile.org_csp_reestr_link }}">
+                            {{ profile.org_csp_code }}
                         </a>
-                        <a href="http://www.naks.ru/specpod/racsp/index.php?ID=540730640">
-                            СУР-3ЦСП
+                        {% endif %}
+                        {% if profile.org_acsp_reestr_link %}
+                        <a href="{{ profile.org_acsp_reestr_link }}">
+                            {{ profile.org_acsp_code }}
                         </a>
-                        <a href="http://www.naks.ru/asm/racsm/index.php?ID=540730641">
-                            АЦСМ-62
+                        {% endif %}
+                        {% if profile.org_acsm_reestr_link  %}
+                        <a href="{{ profile.org_acsm_reestr_link }}">
+                            {{ profile.org_acsm_code }}
                         </a>
-                        <a href="http://www.naks.ru/aso/racso/index.php?ID=540730642">
-                            АЦСО-114
+                        {% endif %}
+                        {% if profile.org_acso_reestr_link  %}
+                        <a href="{{ profile.org_acso_reestr_link }}">
+                            {{ profile.org_acso_code }}
                         </a>
-                        <a href="http://www.naks.ru/ast/racst/index.php?ID=540731108">
-                            АЦСТ-132
+                        {% endif %}
+                        {% if profile.org_acst_reestr_link  %}
+                        <a href="{{ profile.org_acst_reestr_link }}">
+                            {{ profile.org_acst_code }}
                         </a>
+                        {% endif %}
+                        {% if profile.org_cok_reestr_link  %}
+                        <a href="{{ profile.org_cok_reestr_link }}">
+                            {{ profile.org_cok_code }}
+                        </a>
+                        {% endif %}
                       </div>
                       <div class="line_bg_block"></div>
-                        <p class="bg__text__small">АНО ДПО «Стандарт-Диагностика» входит в Группу компаний
-                            «Диагностика», которая была основана в 1994 году.
-                            Учебный центр был создан как структурное подразделение ЗАО МНТЦ «Диагностика» в 1996 году.
-                            Получена лицензия Госгортехнадзора на подготовку кадров 22.04.1996г.
+                        <p class="bg__text__small">
+                            {{ profile.org_history }}
                         </p>
                         <p class="naks__web">
                             <a href="http://www.naks.ru" target="_blank"
