--- a/mainapp/templates/mainapp/includes/header.html
+++ b/mainapp/templates/mainapp/includes/header.html
@@ -4,7 +4,8 @@
         <div class="row align-items-center">
                 <div class="col-md-5 col-sm-5 col-xl-3">
                         <a href="{% url 'main' %}">
-                                <img src="{% static 'img/logo_ac.png' %}" class="header__logo" alt="">
+                                <img src="{% if profile.org_logotype %}{{ profile.org_logotype.url }}
+                                {% else %}https://place-hold.it/200x80{% endif %}" class="header__logo" alt="">
                         </a>
                 </div>
                 <div class="col-md-3 col-sm-4 col-xl-2">
@@ -17,8 +18,8 @@
                 </div>
                 <div class="col-md-4 col-sm-4 col-xl-2">
                         <div class="block__number d-inline-block">
-                                <p class="number">(3519) 58-09-07</p>
-                                <p class="number__text__small">Консультация специалиста</p>
+                                <p class="number">{{ profile.org_main_phone }}</p>
+                                <p class="number__text__small">{{ profile.org_main_phone_text }}</p>
                                 <button class="feedback">
                                                 <a href="#" data-toggle="modal" data-target="#modal-statement">
                                                   Оставить заявку</a>
@@ -27,9 +28,8 @@
                 </div>
                 <div class="col-md-4 col-sm-4 col-xl-2">
                         <div class="adres__block d-inline-block">
-                                <p class="text__adres"> г. Магнитогорск <br> Профсоюзная, дом 14, офис 111
-                                </p>
-                                <a data-fancybox="" data-options="" class="click__on__map" title="Открыть карту" href="https://www.google.com/maps/place/%D1%83%D0%BB.+%D0%9F%D1%80%D0%BE%D1%84%D1%81%D0%BE%D1%8E%D0%B7%D0%BD%D0%B0%D1%8F,+14,+%D0%9C%D0%B0%D0%B3%D0%BD%D0%B8%D1%82%D0%BE%D0%B3%D0%BE%D1%80%D1%81%D0%BA,+%D0%A7%D0%B5%D0%BB%D1%8F%D0%B1%D0%B8%D0%BD%D1%81%D0%BA%D0%B0%D1%8F+%D0%BE%D0%B1%D0%BB.,+455019/@53.3974046,59.0340087,18z/data=!3m1!4b1!4m5!3m4!1s0x43d12f82af4c55f9:0x1cb4da0de2b692ba!8m2!3d53.397403!4d59.035103">
+                                <p class="text__adres">{{ profile.org_address }}</p>
+                                <a class="click__on__map" title="Открыть карту" href="{% url 'contact' %}#map">
                                         Посмотреть на карте</a>
                         </div>
                 </div>
