--- a/mainapp/templates/mainapp/includes/background-block.html
+++ b/mainapp/templates/mainapp/includes/background-block.html
@@ -43,10 +43,10 @@
                             {{ profile.org_history }}
                         </p>
                         <p class="naks__web">
-                            <a href="http://www.naks.ru" target="_blank"
+                            <a href="http://naks.ru" target="_blank"
                                 title="Национальное Агентство Контроля Сварки">www.naks.ru
                                 &nbsp | &nbsp </a>
-                            <a href="http://www.spks.naks.ru" target="_blank"
+                            <a href="http://spks.naks.ru" target="_blank"
                                 title="Совет по профессиональным квалификациям в области сварки">www.spks.naks.ru</a>
                         </p>
 
