--- a/mainapp/templates/mainapp/includes/content.html
+++ b/mainapp/templates/mainapp/includes/content.html
@@ -16,7 +16,7 @@
                     </div>
                     <div class="link__read__more">
                         <a href="{% url 'center_ano_dpo' %}#page-top" class="read__more__link">
-                            Подробнее об организации <img src="{% static 'img/arrow__next.png' %}" alt="">
+                            Подробнее <img src="{% static 'img/arrow__next.png' %}" alt="">
                         </a>
                     </div>
                 </div>
