--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -34,3 +34,10 @@
         background-color: #f8f9fa;
     }
 }
+
+.img_center {
+    margin-bottom: 10px;
+    @media screen and (max-width: 600px) {
+        max-width: 300px;
+    }
+}
