--- a/mainapp/templates/mainapp/includes/content.html
+++ b/mainapp/templates/mainapp/includes/content.html
@@ -19,6 +19,21 @@
                             Подробнее <img src="{% static 'img/arrow__next.png' %}" alt="">
                         </a>
                     </div>
+                    <div class="box_img_center my-3">
+                        <div class="row">
+                        {% for att in attestats %}
+
+                        <div class="col-md-6 col-lg-4">
+                            <a href="{{ att.image.url }}" data-fancybox="images" data-caption="{{ att.title }}">
+                                <img src="{{ att.image.url }}" class="img-fluid img_center mr-2" />
+                            </a>
+                        </div>
+
+                        {% endfor %}
+                        </div>
+
+                  </div>
+
                 </div>
             </div>
 
